--- a/style.css
+++ b/style.css
@@ -18,17 +18,27 @@ main {
     padding: 33px;
 }
 
+hr{
+    border: 1px solid #D1D1D1;
+}
+
 /* Players css styles */
 
 .section-title {
     color: #562EFF;
     font-weight: 500;
     font-size: 24px;
+    margin-top: 3px;
+}
+
+.top-players{
+    margin-bottom: 30px;
 }
 
 .players {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    grid-row-gap: 30px;
 }
 
 .player {
@@ -38,6 +48,7 @@ main {
 
 .player-name{
     margin-left: 16px;
+    font-size: 18px;
 }
 
 .player img {
