--- a/style.css
+++ b/style.css
@@ -9,17 +9,21 @@ body {
 
 main {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 
 .container {
     background-color: #fff;
     width: 870px;
     padding: 33px;
+    border-radius: 5px;
+    margin-top: 21px;
 }
 
-hr{
+hr {
     border: 1px solid #D1D1D1;
+    margin-bottom: 27px;
 }
 
 /* Players css styles */
@@ -31,7 +35,7 @@ hr{
     margin-top: 3px;
 }
 
-.top-players{
+.top-players {
     margin-bottom: 30px;
 }
 
@@ -46,7 +50,7 @@ hr{
     align-items: center;
 }
 
-.player-name{
+.player-name {
     margin-left: 16px;
     font-size: 18px;
 }
@@ -54,4 +58,40 @@ hr{
 .player img {
     height: 56px;
     width: 56px;
+}
+
+/* Blogs styles*/
+
+.blogs{
+    display:grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-row-gap: 26px;
+}
+
+.blog{
+    display: flex;
+}
+
+.blog .thumnail img {
+    width: 177px;
+    height: 117px;
+}
+
+.blog-title{
+    font-size: 20px;
+}
+
+.blog-info{
+    margin-left: 16px;
+}
+
+.blog-author{
+    color: #9F9F9F;
+    font-size: 16px;
+}
+
+.blog-author a{
+    text-decoration: none;
+    font-size: 16px;
+    color: #562EFF;
 }
