--- a/style.css
+++ b/style.css
@@ -62,13 +62,13 @@ hr {
 
 /* Blogs styles*/
 
-.blogs{
-    display:grid;
+.blogs {
+    display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-row-gap: 26px;
 }
 
-.blog{
+.blog {
     display: flex;
 }
 
@@ -77,21 +77,83 @@ hr {
     height: 117px;
 }
 
-.blog-title{
+.blog-title {
     font-size: 20px;
 }
 
-.blog-info{
+.blog-info {
     margin-left: 16px;
 }
 
-.blog-author{
+.blog-author {
     color: #9F9F9F;
     font-size: 16px;
 }
 
-.blog-author a{
+.blog-author a {
     text-decoration: none;
     font-size: 16px;
     color: #562EFF;
+}
+
+/* Courses Style */
+
+.courses{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-column-gap: 24px;
+}
+
+.course .course-banner img {
+    width: 224px;
+    height: 104px;
+}
+
+.course-author{
+    font-size: 14.6913px;
+    color:#ED6B4F;
+}
+
+.course-info{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.fa-star.filled{
+    color: #FFC014;;
+}
+
+.fa-star{
+    color: #AEAEAE;
+    font-size: 12px;
+}
+
+/* Media Query  */
+
+/* mobile Devices */
+@media only screen and (max-width: 688px) {
+    .container{
+        width: 100%;
+    }
+    .players, .blogs, .courses{
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .player, .blog{
+        flex-direction: column;
+    }
+}
+
+/* Tablet Devices */
+@media only screen and (min-width: 689px) and (max-width: 992px) {
+    .container{
+        width: 100%;
+    }
+    .players, .courses{
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .blogs{
+        grid-template-columns: repeat(1, 1fr);
+    }
 }
